# fortran-unit-testing-exercises

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  README.md  fortitude.toml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
.github/workflows/: build-parent-docker-image.yaml  linting.yaml  test.yaml
docker/: Dockerfile.ep-1  Dockerfile.ep-2  Dockerfile.ep-3  Dockerfile.ep-4  Dockerfile.ep-5  Dockerfile.ep-6  Dockerfile.parent
episodes/1-into-to-unit-tests/: README.md
episodes/1-into-to-unit-tests/challenge/: README.md  fpm.toml
episodes/1-into-to-unit-tests/challenge-2/: README.md
episodes/1-into-to-unit-tests/challenge-2/src/: maths.f90
episodes/1-into-to-unit-tests/challenge-2/test/: main.f90  maths_test.f90  maths_test_solution.f90
episodes/1-into-to-unit-tests/challenge/src/: maths.f90
episodes/1-into-to-unit-tests/challenge/test/: test_maths.f90
episodes/1-into-to-unit-tests/solution/: README.md  maths_test_solution.f90  test_maths_solution.f90
episodes/1-into-to-unit-tests/test/: main.f90
episodes/2-intro-to-fortran-unit-tests/challenge/: README.md  fpm.toml
episodes/2-intro-to-fortran-unit-tests/challenge-1/: README.md  fpm.toml
episodes/2-intro-to-fortran-unit-tests/solution/: CMakeLists.txt  README.md  fpm.toml
episodes/2-refactoring-fortran/solution/: README.md
episodes/3-fortran-unit-test-syntax/challenge/: CMakeLists.txt  README.md  fpm.toml
episodes/3-fortran-unit-test-syntax/challenge-1/: CMakeLists.txt  fpm.toml
episodes/3-fortran-unit-test-syntax/challenge-1/challenge/: CMakeLists.txt  README.md
episodes/3-fortran-unit-test-syntax/challenge-1/challenge/pfunit-test/: CMakeLists.txt  test_check_for_steady_state.pf  test_evolve_board.pf  test_find_steady_state.pf  test_read_model_from_file.pf
episodes/3-fortran-unit-test-syntax/challenge-1/challenge/src/: game_of_life.f90  game_of_life_mod.f90
episodes/3-fortran-unit-test-syntax/challenge-1/challenge/test-drive-test/: CMakeLists.txt  main.f90  test_check_for_steady_state.f90  test_read_model_from_file.f90
episodes/3-fortran-unit-test-syntax/challenge-1/challenge/veggies-test/: CTestCustom.cmake
episodes/3-fortran-unit-test-syntax/challenge-1/pfunit-test/: CMakeLists.txt  test_check_for_steady_state.pf  test_evolve_board.pf  test_read_model_from_file.pf
episodes/3-fortran-unit-test-syntax/challenge-1/test-drive-test/: CMakeLists.txt  CTestCustom.cmake  check_for_steady_state_test.f90  evolve_board_test.f90  main.f90
episodes/3-fortran-unit-test-syntax/challenge/test/: CMakeLists.txt  test_find_steady_state.pf
episodes/3-fortran-unit-test-syntax/challenge/test/pfunit/: CMakeLists.txt  test_check_for_steady_state.pf  test_evolve_board.pf  test_find_steady_state.pf  test_read_model_from_file.pf
episodes/3-fortran-unit-test-syntax/challenge/test/test-drive/: CMakeLists.txt  main.f90  test_check_for_steady_state.f90  test_evolve_board.f90  test_find_steady_state.f90  test_read_model_from_file.f90
episodes/3-fortran-unit-test-syntax/challenge/test/veggies/: CMakeLists.txt  main.f90  test_check_for_steady_state.f90  test_evolve_board.f90  test_find_steady_state.f90  test_read_model_from_file.f90
episodes/3-fortran-unit-test-syntax/solution/: .gitignore  CMakeLists.txt  README.md  fpm.toml
episodes/3-fortran-unit-test-syntax/solution/test/: CMakeLists.txt
episodes/3-fortran-unit-test-syntax/solution/test/pfunit/: CMakeLists.txt  test_check_for_steady_state.pf  test_evolve_board.pf  test_find_steady_state.pf  test_read_model_from_file.pf
episodes/3-fortran-unit-test-syntax/solution/test/test-drive/: CMakeLists.txt  main.f90  test_check_for_steady_state.f90  test_evolve_board.f90  test_find_steady_state.f90  test_read_model_from_file.f90
episodes/3-fortran-unit-test-syntax/solution/test/veggies/: CMakeLists.txt  main.f90  test_check_for_steady_state.f90  test_evolve_board.f90  test_find_steady_state.f90  test_read_model_from_file.f90
episodes/3-writing-your-first-unit-test/challenge/: Makefile  README.md
episodes/3-writing-your-first-unit-test/challenge/test/pfunit/: .gitignore  CMakeLists.txt  test_temp_conversions.pf
episodes/3-writing-your-first-unit-test/solution/: README.md  test_temp_conversions.pf
episodes/4-debugging-a-broken-test/: README-solution.md
episodes/4-debugging-a-broken-test/challenge/: CMakeLists.txt  README.md  fpm.toml
episodes/4-debugging-a-broken-test/challenge-1/: README-solution.md  README.md  fpm.toml
episodes/4-debugging-a-broken-test/solution/: README.md
episodes/4-fortran-unit-test-syntax/challenge/: CMakeLists.txt
episodes/4-fortran-unit-test-syntax/solution/: README.md
episodes/5-debugging-a-broken-test/solution/: README.md
episodes/5-debugging-a-failing-test/solution/: README.md
episodes/5-testing-parallel-code/challenge/: .gitignore  CMakeLists.txt  README.md
episodes/5-testing-parallel-code/challenge/src/: game_of_life.f90  game_of_life_mod.f90
episodes/5-testing-parallel-code/challenge/test/: CMakeLists.txt  test_check_for_steady_state.pf  test_evolve_board.pf  test_exchange_boundaries.pf  test_find_steady_state.pf  test_get_local_grid_info.pf  test_read_model_from_file.pf
episodes/5-testing-parallel-code/solution/: .gitignore  CMakeLists.txt  README.md  fpm.toml  test_find_steady_state.pf
episodes/6-testing-parallel-code/challenge/: .gitignore  CMakeLists.txt  Makefile  README.md
episodes/6-testing-parallel-code/solution/: README.md  test_exchange_boundaries.pf
episodes/6-writing-your-first-unit-test/challenge/: README.md
episodes/6-writing-your-first-unit-test/challenge/test/pfunit/: CMakeLists.txt
episodes/6-writing-your-first-unit-test/challenge/test/standard_fortran/: CMakeLists.txt  test_temp_conversions.f90
episodes/6-writing-your-first-unit-test/standard-fortran/challenge/: CMakeLists.txt  README.md
episodes/6-writing-your-first-unit-test/standard-fortran/challenge/test/: test_temp_conversions.f90
episodes/7-refactoring-fortran/challenge/: README.md
episodes/7-refactoring-fortran/solution/: README.md
scripts/: build-pfunit.sh
(+126 files in other folders)
